# pulumi-auth0

./: .ci-mgmt.yaml  .gitignore  .gitmodules  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .upgrade-config.yml  CHANGELOG.md  Makefile  Makefile.github  README.md  mise.toml
.claude/: CLAUDE.md
.config/: mise.toml
.github/: copilot-instructions.md
docs/: _index.md
examples/: examples_dotnet_test.go  examples_go_test.go  examples_js_test.go  examples_nodejs_test.go  examples_py_test.go  examples_test.go  go.mod  go.sum
patches/: 0001-Add-a-shim.patch  0002-Add-a-shim.patch  (+6 more)
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/pulumi_auth0/: README.md  __init__.py  _inputs.py  _tables.py  action.py  action_module.py  attack_protection.py  branding.py  branding_phone_notification_template.py  branding_theme.py  client.py  client_cimd.py  client_credentials.py  client_grant.py  connection.py  connection_client.py  connection_clients.py  connection_directory.py  connection_directory_synchronized_groups.py  connection_keys.py  connection_profile.py  connection_scim_configuration.py  connection_scim_token.py  custom_domain.py  custom_domain_default.py  custom_domain_verification.py  email.py  email_provider.py  email_template.py  encryption_key_manager.py  event_stream.py  flow.py  flow_vault_connection.py  form.py  get_action.py  get_action_module.py  get_action_module_actions.py  get_action_module_version.py  get_action_module_versions.py  get_attack_protection.py  (+91 more)
sdk/python/pulumi_auth0/config/: __init__.pyi  vars.py
(+2830 files in other folders)
